fixed scrollbar repositioning content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1881,3 +1881,15 @@ textarea.form-input::-webkit-resizer { display: none; }
   .timeline-text { max-width: 700px; }
 
 }
+
+
+
+  /**
+   * EXTRAS
+   *
+   */
+
+html {
+  overflow-x: hidden;
+  margin-right: calc(-1 * (100vw - 100%));
+}
